# aiogram_widgets

./: LICENSE  README.md  example.py  pyproject.toml
aiogram_widgets/: classes.py  enums.py  types.py
aiogram_widgets/pagination/: __init__.py  _base.py  keyboard.py  text.py
