[tool.poetry]
name = "aiogram-widgets"
version = "1.1.0"
description = ""
authors = ["ggindinson"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "aiogram_widgets"}]

[project.urls]
"Homepage" = "https://github.com/ggindinson/aiogram-widgets"
"PyPI" = "https://pypi.python.org/pypi/aiogram_widgets/"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0.0b6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
