[project]
name = "aiogram-widgets"
version = "1.1.0"
description = "Create most popular widgets for aiogram 3 in few code lines "
authors = ["ggindinson"]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["aiogram", "telegram api", "pagination", "calendar", "checkbox", "multiselect", "templates"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "aiogram_widgets"}]


[project.urls]
Repository = "https://github.com/ggindinson/aiogram-widgets"
PyPI = "https://pypi.python.org/pypi/aiogram_widgets/"

dependencies = [aiogram>3.0.0b5]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.0.0b6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
